Fix low frame rate problems in high resolution USB cameras using AVFoundation

This CL addresses the issue reported in the below CL about low frame rate in high
resolution USB cameras using AVFoundation. It reorders output formats for
AVCaptureSession.

All credit for this patch goes to briely.marum@coviu.com, see
https://bugs.chromium.org/p/chromium/issues/detail?id=670944#c23

BUG=670944
TEST=Tested video output with C920.

Review-Url: https://codereview.chromium.org/2585383002
Cr-Commit-Position: refs/heads/master@{#439602}

Former-commit-id: c2df103047f0246c7a909544112c76627e0359e8